# KolaKolaTest

./: .gitignore  README.md
CMakeKola/: CMakeLists.txt  KConsole.h  KDate.h  KHour.h  KParameters.h  KWorkRegistry.h  KWorkday.h  UnitTest.cpp  main.cpp
